# cutto

./: .dockerignore  .env.example  .gcloudignore  .gitignore  BLOG_POST.md  DEMO_SCRIPT.md  DEPLOY_CHECKLIST.md  DEVPOST.md  DEVPOST_SUBMISSION.md  Dockerfile  README.md  deploy.sh  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
backend/: adk_agent.py  agent.py  client.py  config.py  main.py  models.py  pipeline.py  requirements.txt
backend/services/: ffmpeg.py  imagen.py  lipsync.py  storage.py  tts.py  veo.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
static/: index.html
static/assets/: ConversationView-BCwTDTSt.js  ConversationView-BpnOQBRq.js  ConversationView-Ccs_tD4Y.js  ConversationView-ChMhGpwz.js  ConversationView-DJ57ro7n.js  ConversationView-kIvBRtT6.js  DoneView-BPq_PseH.js  DoneView-C3aJhF-K.js  DoneView-CPGfl7eE.js  DoneView-CixqmR72.js  DoneView-Cw1EfuLW.js  DoneView-X9dhK_8u.js  GeneratingView-B3jfl_8p.js  GeneratingView-CIUNmDur.js  GeneratingView-Cb-nPWr7.js  GeneratingView-Clp_AZaR.js  GeneratingView-DRGhex2f.js  GeneratingView-Yy3Bxmoe.js  index-BCWIOkLv.js  index-BE0wjngC.js  index-BM0fsuug.js  index-BTrvFuyk.js  index-BVsRpmIm.js  index-C6DnF9bB.js  index-Cd8V9LpT.js  index-CncQxxzO.js  index-D2UhUqpG.js  index-DQx0oYKE.js  index-DXM6R36b.js  index-Wlp7ceie.js  index-fLMve9OK.js  index-u6BOmA1G.js
tests/: conftest.py  test_adk.py  test_agent.py  test_api.py  test_ffmpeg.py  test_imagen.py  test_lipsync.py  test_models.py  test_pipeline.py  test_tts.py  test_veo.py
(+6 files in other folders)
